--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <title>BW-Fahrzeugpflege</title>
-</head>
-<body>
+---
+layout: default
+---
 
-</body>
-</html>
+Hallo
